--- a/content/post/R/communicating-with-data-in-the-tidyverse/index.en.Rmd
+++ b/content/post/R/communicating-with-data-in-the-tidyverse/index.en.Rmd
@@ -39,7 +39,7 @@ ilo_data
 
 For displaying data in ggplot2 graphics, it is often helpful to convert all the variables to the right data type. Usually, categorical variables like country in this example should be converted to factors before plotting them. You can do so using as.factor(). In your data set, two columns are still of type "character" – use mutate() to turn them into factors.
 
-```{r}
+```{r results='hide'}
 # Turn year and country into a factor
 ilo_data_corrected <- ilo_data %>%
   mutate(year = as.factor(as.numeric(year)),
