--- a/content/post/R/writing-efficient-r-code/index.Rmd
+++ b/content/post/R/writing-efficient-r-code/index.Rmd
@@ -8,6 +8,14 @@ tags:
   - R
 ---
 
+The beauty of R is that it is built for performing data analysis. The downside is that sometimes R can be slow, thereby obstructing our analysis. For this reason, it is essential to become familiar with the main techniques for speeding up your analysis, so you can reduce computational time and get insights as quickly as possible.
+
+
+```{r}
+dd <- read.csv("dd.csv")
+```
+
+
 ## 1-2 R version
 
 One of the relatively easy optimizations available is to use an up-to-date version of R. In general, R is very conservative, so upgrading doesn't break existing code. However, a new version will often provide free speed boosts for key functions.
@@ -268,7 +276,7 @@ This gives
 
 m <- matrix(sample(1:6, 6, replace = TRUE), ncol = 2)
 
-```{r}
+```{r warning=FALSE}
 # Load the microbenchmark package
 library(microbenchmark)
 
@@ -392,7 +400,17 @@ apply(dd, 2, median)
 To run this in parallel, you swap apply() for parApply(). The arguments to this function are the same, except that it takes a cluster argument before the usual apply() arguments.
 
 ```{r}
+# Determine the number of available cores.
+detectCores()
 
+# Create a cluster via makeCluster
+cl <- makeCluster(2)
+
+# Parallelize this code
+parApply(cl, dd, 2, median)
+
+# Stop the cluster
+stopCluster(cl)
 ```
 
 ## 4-10 Using parSapply()
@@ -405,6 +423,7 @@ If total is even, reset total to zero.
 If total is greater than 10. The game finishes.
 The game could be simulated using the play() function:
 
+```{r}
 play <- function() {
   total <- no_of_rolls <- 0
   while(total < 10) {
@@ -416,6 +435,9 @@ play <- function() {
   }
   no_of_rolls
 }
+```
+
+
 To simulate the game 100 times, we could use a for loop or sapply():
 
 ```{r, eval=FALSE} res <- sapply(1:100, function(i) play())
@@ -426,7 +448,18 @@ To make functions available on a cluster, you use the [`clusterExport()`](https:
 {r} clusterExport(cl, "some_function") ```
 
 ```{r}
+library("parallel")
+# Create a cluster via makeCluster (2 cores)
+cl <- makeCluster(2)
 
+# Export the play() function to the cluster
+clusterExport(cl, "play")
+
+# Re-write sapply as parSapply
+res <- parSapply(cl, 1:100, function(i) play())
+
+# Stop the cluster
+stopCluster(cl)
 ```
 
 ## 4-11 Timings parSapply()
@@ -434,6 +467,20 @@ To make functions available on a cluster, you use the [`clusterExport()`](https:
 Running the dice game is embarrassingly parallel. These types of simulations usually (but not always) produce a good speed-up. As before, we can use microbenchmark() or system.time(). For simplicity, we'll use system.time() in this exercise.
 
 ```{r}
+# Set the number of games to play
+no_of_games <- 1e5
 
+## Time serial version
+system.time(serial <- sapply(1:no_of_games, function(i) play()))
+
+## Set up cluster
+cl <- makeCluster(4)
+clusterExport(cl, "play")
+
+## Time parallel version
+system.time(par <- parSapply(cl, 1:no_of_games, function(i) play()))
+
+## Stop cluster
+stopCluster(cl)
 ```
 
