--- a/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
+++ b/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
@@ -16,8 +16,11 @@ library(assertive)
 bike_share_rides <- readRDS("bike_share_rides_ch1_1.rds")
 ch3_1_accounts <- readRDS("ch3_1_accounts.rds")
 fodors <- readRDS("fodors.rds")
-sfo_survey_ch2_1 <- readRDS("sfo_survey_ch2_1.rds")
+sfo_survey <- readRDS("sfo_survey_ch2_1.rds")
 zagat <- readRDS("zagat.rds")
+
+dest_sizes <- data.frame(dest_size= c("Small", "Medium", "Large", "Hub"),
+                         passengers_per_day= c("0-20K", "20K-70K", "70K-100K", "100K+"))
 ```
 
 It's commonly said that data scientists spend 80% of their time cleaning and manipulating data and only 20% of their time analyzing it. The time spent cleaning is vital since analyzing dirty data can lead you to draw inaccurate conclusions.
@@ -179,11 +182,6 @@ bike_share_rides_unique %>%
 Another way of handling partial duplicates is to compute a summary statistic of the values that differ between partial duplicates, such as mean, median, maximum, or minimum. This can come in handy when you're not sure how your data was collected and want an average, or if based on domain knowledge, you'd rather have too high of an estimate than too low of an estimate (or vice versa).
 
 ```{r}
-str(bike_share_rides)
-```
-
-
-```{r}
 bike_share_rides %>%
   # Group by ride_id and date
   group_by(ride_id, date) %>%
@@ -195,4 +193,61 @@ bike_share_rides %>%
   select(-duration_mins)
 ```
 
+## 2-3 Not a member
+
+Now that you've practiced identifying membership constraint problems, it's time to fix these problems in a new dataset. Throughout this chapter, you'll be working with a dataset called sfo_survey, containing survey responses from passengers taking flights from San Francisco International Airport (SFO). Participants were asked questions about the airport's cleanliness, wait times, safety, and their overall satisfaction.
+
+There were a few issues during data collection that resulted in some inconsistencies in the dataset. In this exercise, you'll be working with the dest_size column, which categorizes the size of the destination airport that the passengers were flying to. A data frame called dest_sizes is available that contains all the possible destination sizes. Your mission is to find rows with invalid dest_sizes and remove them from the data frame.
+
+```{r}
+# Count the number of occurrences of dest_size
+sfo_survey %>%
+  count(dest_size)
+```
+
+```{r}
+# Find bad dest_size rows
+sfo_survey %>% 
+  # Join with dest_sizes data frame to get bad dest_size rows
+   anti_join(dest_sizes, by = "dest_size") %>%
+  # Select id, airline, destination, and dest_size cols
+  select(id, airline, destination, dest_size)
+```
+
+
+## 2-5 
+
+```{r}
+
+```
+
+## 2-6 
+
+```{r}
+
+```
+
+## 2-7 
+
+```{r}
+
+```
+
+## 2-9 
+
+```{r}
+
+```
+
+## 2-10 
+
+```{r}
+
+```
+
+## 2-11 
+
+```{r}
+
+```
 
