--- a/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
+++ b/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
@@ -214,6 +214,15 @@ sfo_survey %>%
   select(id, airline, destination, dest_size)
 ```
 
+```{r}
+# Remove bad dest_size rows
+sfo_survey %>% 
+  # Join with dest_sizes
+  semi_join(dest_sizes, by = "dest_size") %>%
+  # Count the number of each dest_size
+  count(dest_size)
+```
+
 
 ## 2-5 
 
