--- a/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
+++ b/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
@@ -21,6 +21,9 @@ zagat <- readRDS("zagat.rds")
 
 dest_sizes <- data.frame(dest_size= c("Small", "Medium", "Large", "Hub"),
                          passengers_per_day= c("0-20K", "20K-70K", "70K-100K", "100K+"))
+
+phone_correction <- read_csv("phone_correction.csv")
+
 ```
 
 It's commonly said that data scientists spend 80% of their time cleaning and manipulating data and only 20% of their time analyzing it. The time spent cleaning is vital since analyzing dirty data can lead you to draw inaccurate conclusions.
@@ -288,10 +291,16 @@ sfo_survey %>%
 
 You've recently received some news that the customer support team wants to ask the SFO survey participants some follow-up questions. However, the auto-dialer that the call center uses isn't able to parse all of the phone numbers since they're all in different formats. After some investigation, you found that some phone numbers are written with hyphens (-) and some are written with parentheses ((,)). In this exercise, you'll figure out which phone numbers have these issues so that you know which ones need fixing.
 
-dplyr and stringr are loaded, and sfo_survey is available.
+dplyr and stringr are loaded, and phone_correction is available.
 
 ```{r}
+# Filter for rows with "-" in the phone column
+phone_correction %>%
+  filter(str_detect(phone, "-"))
 
+# Filter for rows with "(" or ")" in the phone column
+phone_correction %>%
+  filter(str_detect(phone, fixed("(")) | str_detect(phone, fixed(")")))
 ```
 
 ## 2-10 Replacing and removing
@@ -299,7 +308,18 @@ dplyr and stringr are loaded, and sfo_survey is available.
 In the last exercise, you saw that the phone column of sfo_data is plagued with unnecessary parentheses and hyphens. The customer support team has requested that all phone numbers be in the format "123 456 7890". In this exercise, you'll use your new stringr skills to fulfill this request.
 
 ```{r}
+# Remove parentheses from phone column
+phone_no_parens <- phone_correction$phone %>%
+  # Remove "("s
+  str_remove_all(fixed("(")) %>%
+  # Remove ")"s
+  str_remove_all(fixed(")"))
 
+# Add phone_no_parens as column
+phone_correction %>%
+  mutate(phone_no_parens = phone_no_parens,
+  # Replace all hyphens in phone_no_parens with spaces
+         phone_clean = str_replace_all(phone_no_parens, "-", " "))
 ```
 
 ## 2-11 Invalid phone numbers
