--- a/content/post/R/case-study-exploratory-data-analysis-in-r/index.Rmd
+++ b/content/post/R/case-study-exploratory-data-analysis-in-r/index.Rmd
@@ -9,11 +9,15 @@ tags:
   - data_wrangling
 ---
 
+Once you've started learning tools for data manipulation and visualization like dplyr and ggplot2, this course gives you a chance to use them in action on a real dataset. You'll explore the historical voting of the United Nations General Assembly, including analyzing differences in voting between countries, across time, and among international issues. In the process you'll gain more practice with the dplyr and ggplot2 packages, learn about the broom package for tidying model output, and experience the kind of start-to-finish exploratory analysis common in data science.
 
-```{r}
+```{r include=FALSE}
 library(tidyverse)
-votes <- read.csv("votes.csv")
-descriptions <- read.csv("descriptions.csv")
+#votes <- read.csv("votes.csv")
+#descriptions <- read.csv("descriptions.csv")
+
+votes <- readRDS("votes.rds")
+descriptions <- readRDS("descriptions.rds")
 ```
 
 ## 1-2 Filtering rows
@@ -149,7 +153,7 @@ by_country %>%
 
 You're more interested in trends of voting within specific countries than you are in the overall trend. So instead of summarizing just by year, summarize by both year and country, constructing a dataset that shows what fraction of the time each country votes "yes" in each year.
 
-```{r}
+```{r wearning=FALSE}
 # Group by year and country: by_year_country
 by_year_country <- votes_processed %>%
   group_by(year, country) %>%
