--- a/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
+++ b/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
@@ -13,6 +13,7 @@ tags:
 library(tidyverse)
 library(assertive)
 library(lubridate) # for date conversion
+library(visdat)
 
 bike_share_rides <- readRDS("bike_share_rides_ch1_1.rds")
 
@@ -28,6 +29,9 @@ phone_correction <- read_csv("phone_correction.csv")
 accounts <- readRDS("ch3_1_accounts.rds")
 account_offices <- read_csv("account_offices.csv")
 accounts_2  <- read_csv("accounts_2.csv")
+accounts_3 <- read_csv("accounts_3.csv")
+accounts_4 <- read_csv("accounts_4.csv")
+
 ```
 
 It's commonly said that data scientists spend 80% of their time cleaning and manipulating data and only 20% of their time analyzing it. The time spent cleaning is vital since analyzing dirty data can lead you to draw inaccurate conclusions.
@@ -406,9 +410,16 @@ Now that you found some inconsistencies in the total amounts, you're suspicious 
 
 dplyr and lubridate are loaded, and accounts is available.
 
-```{r}
-
+```{r  warning=FALSE}
+# Find invalid acct_age
+accounts_2 %>%
+  # theoretical_age: age of acct based on date_opened
+  mutate(theoretical_age =floor(as.numeric(date_opened %--% today(), "years"))) %>%
+  # Filter for rows where acct_age is different from theoretical_age
+  filter(theoretical_age != acct_age)
 ```
+
+!! There is an error.
 
 ## 3-9 Visualizing missing data
 
@@ -419,10 +430,28 @@ You just received a new version of the accounts data frame containing data on th
 You know for a fact that most customers below 25 do not have investment accounts yet, and suspect it could be driving the missingness. The dplyr and visdat packages have been loaded and accounts is available.
 
 ```{r}
+# Visualize the missing values by column
+vis_miss(accounts_3)
 
+accounts_3 %>%
+  # missing_inv: Is inv_amount missing?
+  mutate(missing_inv = is.na(inv_amount)) %>%
+  # Group by missing_inv
+  group_by(missing_inv) %>%
+  # Calculate mean age for each missing_inv group
+  summarize(avg_age = mean(age))
+
+# Sort by age and visualize missing vals
+accounts_3 %>%
+  arrange(age) %>%
+  vis_miss()
 ```
 
 ## 3-10 Treating missing data
+
+Types of missingness
+
+You just learned about the three flavors of missing data: missing completely at random (MCAR), missing at random (MAR), and missing not at random (MNAR).
 
 In this exercise, you're working with another version of the accounts data that contains missing values for both the cust_id and acct_amount columns.
 
@@ -431,8 +460,30 @@ You want to figure out how many unique customers the bank has, as well as the av
 In this exercise, you will drop rows of accounts with missing cust_ids, and impute missing values of inv_amount with some domain knowledge. dplyr and assertive are loaded and accounts is available.
 
 ```{r}
+# Create accounts_clean
+accounts_clean <- accounts_4 %>%
+  # Filter to remove rows with missing cust_id
+  filter(!is.na(cust_id))
+
+accounts_clean
+```
+
+```{r}
+# Create accounts_clean
+accounts_clean <- accounts_4 %>%
+  # Filter to remove rows with missing cust_id
+  filter(!is.na(cust_id)) %>%
+  # Add new col acct_amount_filled with replaced NAs
+  mutate(acct_amount_filled = ifelse(is.na(acct_amount), 5*inv_amount, acct_amount))
+
+accounts_clean
+
+# Assert that cust_id has no missing vals
+assert_all_are_not_na(accounts_clean$cust_id)
+
 
 ```
+
 
 ## 4-3 Small distance, small difference
 In the video exercise, you learned that there are multiple ways to calculate how similar or different two strings are. Now you'll practice using the stringdist package to compute string distances using various methods. It's important to be familiar with different methods, as some methods work better on certain datasets, while others work better on other datasets.
