--- a/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
+++ b/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
@@ -14,6 +14,8 @@ library(tidyverse)
 library(assertive)
 library(lubridate) # for date conversion
 library(visdat)
+library(stringdist) # for Calculate distance between strings
+library(fuzzyjoin)  # for strings distance 
 
 bike_share_rides <- readRDS("bike_share_rides_ch1_1.rds")
 
@@ -486,15 +488,27 @@ assert_all_are_not_na(accounts_clean$cust_id)
 
 
 ## 4-3 Small distance, small difference
+
 In the video exercise, you learned that there are multiple ways to calculate how similar or different two strings are. Now you'll practice using the stringdist package to compute string distances using various methods. It's important to be familiar with different methods, as some methods work better on certain datasets, while others work better on other datasets.
 
 The stringdist package has been loaded for you.
 
-```{r}
 
+Calculate the distance between "las angelos" and "los angeles".
+
+```{r}
+# Calculate Damerau-Levenshtein distance
+stringdist("las angelos", "los angeles", method = "dl")
+
+# Calculate LCS distance
+stringdist("las angelos", "los angeles", method = "lcs")
+
+# Calculate Jaccard distance
+stringdist("las angelos", "los angeles", method = "jaccard")
 ```
 
 ## 4-4 Fixing typos with string distance
+
 In this chapter, one of the datasets you'll be working with, zagat, is a set of restaurants in New York, Los Angeles, Atlanta, San Francisco, and Las Vegas. The data is from Zagat, a company that collects restaurant reviews, and includes the restaurant names, addresses, phone numbers, as well as other restaurant information.
 
 The city column contains the name of the city that the restaurant is located in. However, there are a number of typos throughout the column. Your task is to map each city to one of the five correctly-spelled cities contained in the cities data frame.
@@ -503,6 +517,18 @@ dplyr and fuzzyjoin are loaded, and zagat and cities are available.
 
 ```{r}
 
+cities <- data.frame(city_actual=c("new york", "los angeles", "atlanta", "san francisco", "las vegas"))
+
+# Count the number of each city variation
+zagat %>%
+  count(city)
+
+# Join zagat and cities and look at results
+zagat %>%
+  # Left join based on stringdist using city and city_actual cols
+  stringdist_left_join(cities, by = c(city = "city_actual")) %>%
+  # Select the name, city, and city_actual cols
+  select(name, city, city_actual)
 ```
 
 
