--- a/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
+++ b/content/post/2021-09-18-cleaning-data-in-r/index.en.Rmd
@@ -515,7 +515,7 @@ The city column contains the name of the city that the restaurant is located in.
 
 dplyr and fuzzyjoin are loaded, and zagat and cities are available.
 
-```{r}
+```{r results='hide'}
 
 cities <- data.frame(city_actual=c("new york", "los angeles", "atlanta", "san francisco", "las vegas"))
 
