--- a/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
+++ b/content/post/2021-09-22-credit-risk-modeling-in-r/index.en.Rmd
@@ -15,6 +15,7 @@ library(gmodels)
 library(tidyverse)
 
 loan_data <- readRDS("loan_data_ch1.rds")
+model_pred <- read.csv("model_pred.csv")
 bb <- readRDS("loan_data_ch2.rds")
 ```
 
@@ -181,7 +182,6 @@ training_set <- loan_data[index_train, ]
 # Create test set: test_set
 test_set <- loan_data[-index_train, ]
 
-
 ```
 
 
@@ -192,7 +192,14 @@ In this example, assume that you have run a model and stored the predicted outco
 ![Caption for the picture.](1.JPG)
 
 ```{r}
+# Create confusion matrix
+ conf_matrix <- table(test_set$loan_status, model_pred$x)
+conf_matrix
+# Compute classification accuracy
+(conf_matrix[1,1]+conf_matrix[2,2])/(conf_matrix[1,1]+conf_matrix[2,2]+conf_matrix[2,1]+conf_matrix[1,2])
 
+# Compute sensitivity
+conf_matrix[2,2]/(conf_matrix[2,1]+conf_matrix[2,2])
 ```
 
 
